ecmascript/parser/tests/test262-error-references/fail/26c0710a6449872a.module.js.stderr
error: Expected ',', got 'b'
 --> $DIR/tests/test262-parser/fail/26c0710a6449872a.module.js:1:12
  |
1 | export {as b} from a
  |            ^

